# DawnSimpleTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dawnsimpletest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dump_utils.cpp  dump_utils.h  main.cpp
app/src/main/cpp/dawn/: dawn_proc_table.h  webgpu.h
app/src/main/cpp/dawn/wire/client/: webgpu.h  webgpu_cpp.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dawnsimpletest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
